--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "author": "BigCommerce",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@bigcommerce/stencil-utils": "^6.8.1",
-    "core-js": "^3.9.0",
+    "babel-preset-react": "^6.24.1",
+    "core-js": "^3.16.1",
     "creditcards": "^3.0.1",
+    "css-loader": "^6.2.0",
     "easyzoom": "^2.5.3",
     "focus-trap": "^6.3.0",
     "focus-within-polyfill": "^5.1.0",
@@ -21,8 +24,11 @@
     "nanobar": "^0.4.2",
     "nod-validate": "^2.0.12",
     "object-fit-images": "^3.2.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
     "slick-carousel": "^1.8.1",
+    "style-loader": "^3.2.1",
     "svg-injector": "^1.1.3",
     "sweetalert2": "^9.17.2",
     "whatwg-fetch": "^3.6.1"
